--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./base/index";
 @import "./layout/header";
 @import "./layout/banner";
+@import "./layout/profil";
 @import "./layout/forum";
 @import "./layout/form";
