--- a/src/styles/sass/layout/_banner.scss
+++ b/src/styles/sass/layout/_banner.scss
@@ -1,19 +1,19 @@
 .barAccount {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     background-color: rgb(53, 53, 233);
-    width: 5%;
-    height: 100%;
+    width: 100%;
+    height: 8%;
     > .blockImg {
-        background-color: white;
-        border: 2px solid black;
+        border: 2px solid white;
         border-radius: 50%;
         align-items: center;
         margin-top: 25px;
         margin-bottom: 30px;
-        width: 70%;
+        overflow: hidden;
+        width: 70px;
         height: 70px;
         > img {
             object-fit: cover;
@@ -25,9 +25,9 @@
         width: 70%;
         > li {
             list-style-type: none;
+            display: inline;
             padding-bottom: 15px;
-            display: flex;
-            flex-direction: row;
+            margin: 25px;
             > a {
                 text-decoration: none;
                 color: white;
