--- a/src/styles/sass/layout/_forum.scss
+++ b/src/styles/sass/layout/_forum.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    width: 95%;
+    width: 100%;
     height: 100vh;
     > .message {
         display: flex;
@@ -45,12 +45,36 @@
     width: 70%;
     > .containMsg {
         margin-top: 20px;
+        display: flex;
+        flex: 2;
         border-radius: 20px;
         border-bottom-right-radius: 0px;
         border: 2px solid rgb(53, 53, 233);
         padding: 5px;
+        > .img {
+            border: 2px solid rgb(53, 53, 233);
+            border-radius: 50%;
+            align-items: center;
+            margin-top: 25px;
+            margin-bottom: 30px;
+            overflow: hidden;
+            width: 70px;
+            height: 70px;
+            > img {
+                object-fit: cover;
+                object-position: center;
+                width: 70px;
+            }
+        }
+        > .btn {
+            border-radius: 20px;
+            border: 2px solid rgb(53, 53, 233);
+            margin: 30px;
+            width: 7%;
+            padding: 10px;
+            font-size: 20px;
+            color:rgb(53, 53, 233);
+        }
     }
 
 }
-
-// <FontAwesomeIcon icon={faPaperPlane}/>
