--- a/src/styles/sass/layout/_profil.scss
+++ b/src/styles/sass/layout/_profil.scss
@@ -1,6 +1,8 @@
 .profilAccount {
     background-color: white;
-    width: 95%;
+    width: 70%;
+    height: 100vh;
+    margin: auto;
     > .containProfil {
         border: 2px solid blue;
         border-radius: 20px;
