--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -4,3 +4,5 @@
 @import "./layout/profil";
 @import "./layout/forum";
 @import "./layout/form";
+@import "./layout/chat";
+@import "./layout/entree";
