--- a/src/styles/sass/base/_index.scss
+++ b/src/styles/sass/base/_index.scss
@@ -6,6 +6,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-image: url("../images/fond.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
 code {
@@ -15,8 +17,10 @@ code {
 
 
 .homepage {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  margin: auto;
   display: flex;
   flex-direction: column;
+  // background: white;
 }
