--- a/src/styles/sass/layout/_banner.scss
+++ b/src/styles/sass/layout/_banner.scss
@@ -1,11 +1,11 @@
 .barAccount {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     background-color: rgb(53, 53, 233);
     width: 100%;
-    height: 8%;
+    height: 7%;
     > .blockImg {
         border: 2px solid white;
         border-radius: 50%;
@@ -22,7 +22,7 @@
         }
     }
     > nav {
-        width: 70%;
+        width: 20%;
         > li {
             list-style-type: none;
             display: inline;
