--- a/src/styles/sass/layout/_forum.scss
+++ b/src/styles/sass/layout/_forum.scss
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    width: 100%;
-    height: 100vh;
+    width: 70%;
+    height: 93vh;
+    margin: auto;
     > .message {
         display: flex;
         flex-direction: row;
@@ -42,29 +43,37 @@
 }
 
 .conversation {
-    width: 70%;
+    width: 100%;
     > .containMsg {
         margin-top: 20px;
         display: flex;
-        flex: 2;
         border-radius: 20px;
         border-bottom-right-radius: 0px;
         border: 2px solid rgb(53, 53, 233);
         padding: 5px;
-        > .img {
-            border: 2px solid rgb(53, 53, 233);
-            border-radius: 50%;
-            align-items: center;
-            margin-top: 25px;
-            margin-bottom: 30px;
-            overflow: hidden;
-            width: 70px;
-            height: 70px;
-            > img {
-                object-fit: cover;
-                object-position: center;
-                width: 70px;
+        width: 100%;
+        > .containMsgBox {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            > .boxImg {
+                display: flex;
+                > .img {
+                    border: 2px solid rgb(53, 53, 233);
+                    border-radius: 50%;
+                    align-items: center;
+                    margin-top: 10px;
+                    overflow: hidden;
+                    width: 70px;
+                    height: 70px;
+                    > img {
+                        object-fit: cover;
+                        object-position: center;
+                        width: 70px;
+                    }
+                } 
             }
+            
         }
         > .btn {
             border-radius: 20px;
