--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("../images/fond.jpg");
+  object-fit: cover;
+  background-repeat: no-repeat;
 }
 
 code {
@@ -11,8 +13,9 @@ code {
 }
 
 .homepage {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  margin: auto;
   display: flex;
   flex-direction: column;
 }
@@ -53,11 +56,11 @@ code {
 .barAccount {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   background-color: #3535e9;
   width: 100%;
-  height: 8%;
+  height: 7%;
 }
 .barAccount > .blockImg {
   border: 2px solid white;
@@ -75,7 +78,7 @@ code {
   width: 70px;
 }
 .barAccount > nav {
-  width: 70%;
+  width: 20%;
 }
 .barAccount > nav > li {
   list-style-type: none;
@@ -92,7 +95,9 @@ code {
 
 .profilAccount {
   background-color: white;
-  width: 95%;
+  width: 70%;
+  height: 100vh;
+  margin: auto;
 }
 .profilAccount > .containProfil {
   border: 2px solid blue;
@@ -124,8 +129,9 @@ code {
   flex-direction: column;
   align-items: center;
   background-color: white;
-  width: 100%;
-  height: 100vh;
+  width: 70%;
+  height: 93vh;
+  margin: auto;
 }
 .boxMessage > .message {
   display: flex;
@@ -163,28 +169,35 @@ code {
 }
 
 .conversation {
-  width: 70%;
+  width: 100%;
 }
 .conversation > .containMsg {
   margin-top: 20px;
   display: flex;
-  flex: 2;
   border-radius: 20px;
   border-bottom-right-radius: 0px;
   border: 2px solid #3535e9;
   padding: 5px;
+  width: 100%;
 }
-.conversation > .containMsg > .img {
+.conversation > .containMsg > .containMsgBox {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.conversation > .containMsg > .containMsgBox > .boxImg {
+  display: flex;
+}
+.conversation > .containMsg > .containMsgBox > .boxImg > .img {
   border: 2px solid #3535e9;
   border-radius: 50%;
   align-items: center;
-  margin-top: 25px;
-  margin-bottom: 30px;
+  margin-top: 10px;
   overflow: hidden;
   width: 70px;
   height: 70px;
 }
-.conversation > .containMsg > .img > img {
+.conversation > .containMsg > .containMsgBox > .boxImg > .img > img {
   object-fit: cover;
   object-position: center;
   width: 70px;
@@ -278,6 +291,34 @@ aside > .textForm > h1 {
   margin: auto;
   border-radius: 20px;
   background-color: white;
+}
+
+.boxChat {
+  width: 50%;
+}
+.boxChat > .chat {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.boxChat > .chat > .containAnswers {
+  display: flex;
+  width: 100%;
+}
+.boxChat > .chat > .containAnswers > .img {
+  border: 2px solid #3535e9;
+  border-radius: 50%;
+  overflow: hidden;
+  align-items: center;
+  margin-top: 25px;
+  margin-bottom: 30px;
+  width: 70px;
+  height: 70px;
+}
+.boxChat > .chat > .containAnswers > .img > img {
+  object-fit: cover;
+  object-position: center;
+  width: 70px;
 }
 
 /*# sourceMappingURL=style.css.map */
