--- a/src/styles/sass/layout/_forum.scss
+++ b/src/styles/sass/layout/_forum.scss
@@ -70,25 +70,51 @@
         > .containMsgBox {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            width: 60%;
             > .boxImg {
                 display: flex;
-                > .img {
-                    border: 2px solid rgb(53, 53, 233);
-                    border-radius: 50%;
-                    align-items: center;
-                    margin-top: 10px;
-                    overflow: hidden;
-                    width: 70px;
-                    height: 70px;
-                    > img {
-                        object-fit: cover;
-                        object-position: center;
+                flex-direction: column;
+                width: 100%;
+                > .imgName {
+                    display: flex;
+                    border-bottom: 2px solid rgb(53, 53, 233);
+                    > .img {
+                        border: 2px solid rgb(53, 53, 233);
+                        border-radius: 50%;
+                        align-items: center;
+                        margin-top: 10px;
+                        margin-bottom: 10px;
+                        overflow: hidden;
                         width: 70px;
+                        height: 70px;
+                        > img {
+                            object-fit: cover;
+                            object-position: center;
+                            width: 70px;
+                        }
                     }
-                } 
+                    > h2 {
+                        padding-left: 20px;
+                        margin-top: 25px;
+                    }
+                }
+                > .boxMsg {
+                    width: 70%;
+                    > .imgFile {
+                        width: 100%;
+                        > img {
+                            object-fit: cover;
+                            object-position: center;
+                            width: 100%;
+                        }
+                    }
+                }
+                
             }
-            
+            > .boxCommentaire {
+                display: flex;
+                align-items: center;
+            }
         }
         > .btn {
             border-radius: 20px;
