securisation & supp img post

--- a/src/styles/sass/layout/_forum.scss
+++ b/src/styles/sass/layout/_forum.scss
@@ -18,6 +18,7 @@
             align-items: center;
             justify-content: center;
             border-bottom: 2px solid grey;
+            background-color: white;
             width: 100%;
             > .logo {
                 object-fit: cover;
