--- a/src/styles/sass/layout/_buttonDelete.scss
+++ b/src/styles/sass/layout/_buttonDelete.scss
@@ -1,12 +1,8 @@
-.buttonUpdate {
+.buttonDelete {
     border: none;
     background-color: rgb(53, 53, 233);
     margin: 10px;
     padding: 5px;
     font-size: 25px;
     color:rgb(209,81,90);
-}
-
-.inputTextarea {
-    display: none;
 }
