--- a/src/styles/sass/layout/_banner.scss
+++ b/src/styles/sass/layout/_banner.scss
@@ -1,39 +1,43 @@
 .barAccount {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
     background-color: rgb(53, 53, 233);
     width: 100%;
     height: 7%;
-    > .blockImg {
-        border: 2px solid white;
-        border-radius: 50%;
+    > div {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        margin-top: 25px;
-        margin-bottom: 30px;
-        overflow: hidden;
-        width: 70px;
-        height: 70px;
-        > img {
-            object-fit: cover;
-            object-position: center;
+        margin: auto;
+        width: 60%;
+        height: 100%;
+        > .blockImg {
+            border: 2px solid white;
+            border-radius: 50%;
+            align-items: center;
+            overflow: hidden;
+            margin-left: 30px;
             width: 70px;
-        }
-    }
-    > nav {
-        width: 20%;
-        > li {
-            list-style-type: none;
-            display: inline;
-            padding-bottom: 15px;
-            margin: 25px;
-            > a {
-                text-decoration: none;
-                color: white;
-                font-size: 30px;
-                margin: auto;
+            height: 70px;
+            > img {
+                object-fit: cover;
+                object-position: center;
+                width: 70px;
             }
         }
+        > nav {
+            > li {
+                list-style-type: none;
+                display: inline;
+                padding-bottom: 15px;
+                margin: 25px;
+                > a {
+                    text-decoration: none;
+                    color: white;
+                    font-size: 30px;
+                    margin: auto;
+                }
+            }
+        }  
     }
+    
 }
