--- a/src/styles/sass/layout/_chat.scss
+++ b/src/styles/sass/layout/_chat.scss
@@ -1,27 +1,54 @@
 
 .boxChat {
-    width: 50%;
+    width: 100%;
     > .chat {
         display: flex;
         flex-direction: column;
         width: 100%;
+        border-top: 2px solid rgb(209,81,90);
         > .containAnswers {
             display: flex;
+            flex-direction: column;
             width: 100%;
             > .img {
-                border: 2px solid rgb(53, 53, 233);
-                border-radius: 50%;
-                overflow: hidden;
+                display: flex;
                 align-items: center;
-                margin-top: 25px;
-                margin-bottom: 30px;
-                width: 70px;
-                height: 70px;
-                > img {
-                    object-fit: cover;
-                    object-position: center;
-                    width: 70px;
+                margin-left: 20px;
+                margin-right: 10px;
+                border-bottom: 2px solid rgb(209,81,90);
+                > .iconArrow {
+                    font-size: 40px;
+                    color: rgb(209,81,90);
+                    margin-right: 20px;
                 }
+                > div {
+                    border: 2px solid white;
+                    border-radius: 50%;
+                    overflow: hidden;
+                    align-items: center;
+                    margin-top: 25px;
+                    margin-bottom: 30px;
+                    width: 70px;
+                    height: 70px;
+                    > img {
+                        object-fit: cover;
+                        object-position: center;
+                        width: 70px;
+                    }
+                }
+                > h2 {
+                    font-family: "Ubuntu";
+                    color: rgb(209,81,90);
+                    padding-left: 20px;
+                    margin-top: 25px;
+                    width: 50%;
+                }
+            }
+            > p {
+                font-family: "Ubuntu";
+                font-size: 20px;
+                color: #d1515a;
+                margin-left: 30px;
             }
         }
     }
