--- a/src/styles/sass/layout/_entree.scss
+++ b/src/styles/sass/layout/_entree.scss
@@ -1,3 +1,25 @@
 .entreeMsg {
+    width: 90%;
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    > input {
+        width: 75%;
+        height: 30px;
+        border: 1px solid rgb(209,81,90);
+        border-radius: 10px;
+    }
+    > button {
+        border-radius: 20px;
+        border: none;
+        margin: 10px;
+        width: 10%;
+        height: 40px;
+        padding: 0px;
+        font-size: 25px;
+        color: rgb(53, 53, 233);
+        background-color: rgb(209,81,90);
+    }
     
 }
