--- a/src/styles/sass/layout/_profil.scss
+++ b/src/styles/sass/layout/_profil.scss
@@ -1,22 +1,27 @@
 .profilAccount {
     background-color: white;
-    width: 70%;
-    height: 100vh;
+    width: 60%;
+    min-height: 93vh;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     > .containProfil {
-        border: 2px solid blue;
+        box-sizing: border-box;
+        background-color: rgb(53, 53, 233);
+        box-shadow: 5px 5px 5px  grey;
         border-radius: 20px;
-        width: 50%;
-        height: 85%;
-        margin: 20px;
-        padding: 50px;
+        width: 95%;
+        margin: 10px;
+        padding: 30px;
         > .containImg {
             display: flex;
-            flex-direction: row;
+            align-items: center;
             > .changeImg {
                 width: 70px;
                 height: 70px;
-                border: 2px solid blue;
+                margin: 20px;
+                border: 2px solid white;
                 border-radius: 50px;
                 overflow: hidden;
                 > img {
@@ -25,6 +30,84 @@
                     width: 70px;
                 }
             }
+            > .inputDiv {
+                > label > h2 {
+                    font-family: "Ubuntu";
+                    color: rgb(209,81,90);
+                    font-size: 22px;
+                    margin: 0px;
+                }
+            }
+        }
+        > h2 {
+            font-family: "Ubuntu";
+            color: rgb(209,81,90);
+            font-size: 22px;
+        }
+        > .inputDiv {
+            > label > p {
+            font-family: "Ubuntu";
+            color: rgb(209,81,90);
+            font-size: 22px;
+            margin-bottom: 0px;
+            }
+            > input {
+                width: 25%;
+                height: 30px;
+                border: 1px solid rgb(209,81,90);
+                border-radius: 10px;
+            }
+        }
+        > .button {
+            margin-top: 20px;
+            margin-left: 30px;
+            > input {
+                width: 20%;
+                height: 40px;
+                border-radius: 20px;
+                border: none;
+                margin: 10px;
+                padding: 0px;
+                font-family: "Ubuntu";
+                font-weight: 600;
+                font-size: 20px;
+                color: rgb(53, 53, 233);
+                background-color: rgb(209,81,90);
+        } 
+        } 
+    }
+    > aside {
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+        background-color: rgb(53, 53, 233);
+        box-shadow: 5px 5px 5px  grey;
+        border-radius: 20px;
+        margin: 10px;
+        padding: 30px;
+        width: 95%;
+        height: 80px;
+        > label > h2 {
+            font-family: "Ubuntu";
+            color: rgb(209,81,90);
+            font-size: 22px;
+        }
+        > button {
+            width: 20%;
+            height: 40px;
+            border-radius: 20px;
+            border: none;
+            margin: 10px;
+            padding: 0px;
+            font-family: "Ubuntu";
+            font-weight: 600;
+            font-size: 20px;
+            color: rgb(53, 53, 233);
+            background-color: rgb(209,81,90);
         }
     }
 }
+
+
+
+
