--- a/src/styles/sass/layout/_banner.scss
+++ b/src/styles/sass/layout/_banner.scss
@@ -10,6 +10,9 @@
         margin: auto;
         width: 60%;
         height: 100%;
+        @media (max-width: 1200px) {
+            width: 95%;
+        }
         > .blockImg {
             border: 2px solid white;
             border-radius: 50%;
@@ -18,10 +21,17 @@
             margin-left: 30px;
             width: 70px;
             height: 70px;
+            @media (max-width: 900px) {
+                width: 50px;
+                height: 50px
+            }
             > img {
                 object-fit: cover;
                 object-position: center;
                 width: 70px;
+                @media (max-width: 900px) {
+                    width: 50px;
+                }
             }
         }
         > nav {
