--- a/src/styles/sass/layout/_form.scss
+++ b/src/styles/sass/layout/_form.scss
@@ -2,17 +2,32 @@ aside {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    height: 700px;
+    margin-top: 100px;
+    @media (max-width: 980px) {
+        flex-direction: column;
+        margin-top: 0px;
+    }
     > .textForm {
         width: 60%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         text-align: center;
         margin-top: 200px;
+        @media (max-width: 980px) {
+            width: 100%;
+            margin-top: 0px;
+        }
         > h1 {
             font-size: 30px;
             color: white;
             margin-left: 100px;
             margin-right: 100px;
+            @media (max-width: 450px) {
+                font-size: 25px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
         }
     }
 }
@@ -24,10 +39,18 @@ aside {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
-    height: 80%;
+    width: 25%;
+    height: 650px;
     margin-left: 100px;
     margin-right: 150px;
+    @media (max-width: 1350px) {
+        width: 50%;
+    }
+    @media (max-width: 980px) {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     > h1 {
         font-size: 30px;
         margin-bottom: 5px;
