--- a/src/styles/sass/layout/_forum.scss
+++ b/src/styles/sass/layout/_forum.scss
@@ -6,6 +6,9 @@
     width: 60%;
     height: 93vh;
     margin: auto;
+    @media (max-width: 1200px) {
+        width: 100%;
+    }
     > .message {
         display: flex;
         flex-direction: row;
@@ -20,12 +23,19 @@
             border-bottom: 4px solid rgb(189, 189, 189);
             background-color: white;
             width: 100%;
+            height: 90px;
             > .logo {
                 object-fit: cover;
                 width: 6%;
+                @media (max-width: 1200px) {
+                    width: 8%;
+                }
+                @media (max-width: 850px) {
+                    width: 12%;
+                }
             }
             > .text {
-                width: 75%;
+                width: 70%;
                 height: 55%;
                 background-color: rgb(53, 53, 233);
                 border: 3px solid rgb(209,81,90);
@@ -34,17 +44,27 @@
                 font-family: "Ubuntu";
                 font-size: 20px;
                 color: rgb(209,81,90);
+                @media (max-width: 850px) {
+                    width: 60%;
+                }
             }
             > .submit {
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 border-radius: 20px;
                 border: 4px solid rgb(53, 53, 233);
                 background-color: rgb(53, 53, 233);
                 box-shadow: 5px 5px 5px  grey;
                 margin: 10px;
-                width: 5%;
+                width: 6%;
+                height: 65%;
                 padding: 10px;
                 font-size: 25px;
                 color: rgb(209,81,90);
+                @media (max-width: 850px) {
+                    width: 8%;
+                }
             }
             > .label-file {
                 cursor: pointer;
@@ -54,10 +74,14 @@
                 box-shadow: 5px 5px 5px  grey;
                 border-radius: 20px;
                 width: 4%;
+                height: 45%;
                 margin: 10px;
                 padding: 5px;
                 font-size: 30px;
                 text-align: center;
+                @media (max-width: 850px) {
+                    width: 6%;
+                }
             }
             > .file {
                 display: none;
@@ -69,8 +93,10 @@
     overflow-y: scroll;
     width: 100%;
     > .conversation {
-        width: 85%;
+        width: 95%;
         margin: auto;
+        display: flex;
+        flex-direction: column-reverse;
         margin-bottom: 20px;
         > .containMsg {
             display: flex;
@@ -100,7 +126,10 @@
                             display: flex;
                             justify-content: flex-start;
                             align-items: center;
-                            width: 30%;
+                            width: 60%;
+                            @media (max-width: 600px) {
+                                width: 50%;
+                            }
                             > .img {
                                 border: 2px solid rgb(53, 53, 233);
                                 border-radius: 50%;
@@ -123,16 +152,30 @@
                                 color: rgb(209,81,90);
                                 font-family: "Ubuntu";
                                 font-size: 35px;
+                                @media (max-width: 700px) {
+                                    font-size: 25px;
+                                    padding-left: 10px;
+                                }
                             }
                         }  
                         > .blockRight {
                             display: flex;
                             justify-content: flex-end;
-                            width: 20%;
+                            align-items: center;
+                            width: 25%;
+                            @media (max-width: 600px) {
+                                width: 35%;
+                            }
+                            > .blockLike {
+                                display: flex;
+                                justify-items: center;
+                                align-items: center;
+                                width: 40%;
+                            }
                         }
                     }
                     > .boxMsg {
-                        width: 70%;
+                        width: 100%;
                         > h2 {
                             font-family: "Ubuntu";
                             font-size: 20px;
@@ -144,6 +187,9 @@
                             > img {
                                 object-fit: cover;
                                 object-position: center;
+                                width: 100%;
+                            }
+                            > video {
                                 width: 100%;
                             }
                         }
