--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -10,6 +10,11 @@
         padding-top: 20px;
         width: 25%;
         object-fit: cover;
+        @media (max-width: 450px) {
+            padding-left: 10px;
+            padding-top: 5px;
+            width: 40%;
+        }
     }
 
 }
@@ -18,8 +23,17 @@
     display: flex;
     flex-direction: row;
     padding: 20px;
+    @media (max-width: 450px) {
+        padding: 0px;
+    }
     > .menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding-right: 20px;
+        @media (max-width: 400px) {
+            padding: 0px;
+        }
         > li {
             list-style-type: none;
             float: left;
